--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,11 @@
     state: present
   when: ansible_os_family == rh_fam
 
+- name: Update apt cache
+  apt:
+    update_cache: yes
+  when: ansible_os_family == deb_fam
+
 - name: Install nginx
   package:
     name: "{{ item }}" 
@@ -148,4 +153,3 @@
 - name: Clean apt cache
   command: apt-get autoclean
   when: ansible_os_family == deb_fam
-
