fixing up statics behavior in nginx config

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,10 @@
 ---
 STATIC_ROOT: /static
+STATIC_LOCATION: "{{ STATIC_ROOT }}/"
 PIDFILE_DIR: /run/nginx
 ASSET_PATHS: []
 PROXY: no 
 PROXY_PASS: ""
 PROXY_LOCATION: "/"
+
+CACHE_STATICS: no
