--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -46,7 +46,7 @@
 - name: Put extra nginx site config if specified
   template:
     src: "{{ item }}.j2"
-    dest: /etc/nginx/conf.d/{{ item }}
+    dest: /etc/nginx/conf.d/{{ item | basename }}
     owner: root
     group: root
     mode: 0664
